# swisspair-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  interface.py  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml  check_pr.yml  create_tag.yml  deploy_pypi.yml  deploy_test_pypi.yml  pr_to_master.yml  push_master.yml
install/: Makefile
src/: bindings.cpp  test.py
src/pyswisspair/: __init__.py  interface.py
src/swisspair/: interface.py
